started new repository

--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <<link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
+    <div class ="container-fluid">
+      <header class="row-fluid">
+      <div class = "col-sm-12">
+        <div class="row-fluid">
+          <div class="col-sm-12">header</div>
+        </header>
+      </div>
+
+<div class "container">
+  <content class="row-fluid">
+    <div class="col-sm-9">content</div>
+    <div class="col-sm-3">aside</div>
+  </content>
+</div>
 
 <div class="container">
-  <div class="col-sm-12">
+  <promo class="row=fluid">
+    <div class="col-sm-3">promo1</div>
+    <div class="col-sm-3">promo2</div>
+    <div class="col-sm-3">promo3</div>
+    <div class="col-sm-3">promo4</div>
 
 
-</body>
-</html>
+
+  </body>
+  </html>
